Fix scrollbars of old panel

--- a/client/web/src/global/CoolCodeIntel.module.scss
+++ b/client/web/src/global/CoolCodeIntel.module.scss
@@ -1,23 +1,3 @@
-.global-codeintel {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    background-color: var(--body-bg);
-}
-
-.hover-markdown {
-    p,
-    pre {
-        padding-left: 0.5rem;
-        margin-bottom: 0;
-        padding-bottom: 0;
-        padding-top: 0;
-    }
-    code {
-        padding-left: 0;
-    }
-}
-
 .cool-code-intel-reference {
     code {
         overflow: hidden;
